@@ -25,6 +25,7 @@
 package jdk.jfr.consumer;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -57,7 +58,7 @@ public final class MetadataEvent {
      * @return an immutable list of event types, not {@code null}
      */
     public final List<EventType> getEventTypes() {
-        return List.copyOf(current);
+        return Collections.unmodifiableList(current);
     }
 
     /**
